feat(CLOUDDST-24366) Update description of show-sbom
SPDX format will be supported by build-definitions later. Added it
to the description of show-sbom tasks.

Signed-off-by: Emily Zheng <yuzheng@redhat.com>

--- a/task/show-sbom-rhdh/0.1/show-sbom-rhdh.yaml
+++ b/task/show-sbom-rhdh/0.1/show-sbom-rhdh.yaml
@@ -14,7 +14,7 @@ metadata:
     task.output.location: results
 spec:
   description: >-
-    Shows the Software Bill of Materials (SBOM) generated for the built image in CyloneDX JSON format.
+    Shows the Software Bill of Materials (SBOM) generated for the built image in CycloneDX/SPDX JSON format.
     The 'task.*' annotations are processed by Red Hat Developer Hub (RHDH) so that the log content can be rendered in its UI.
   params:
     - name: IMAGE_URL
